--- a/jsidplay2/src/main/resources/netsiddev/About.properties
+++ b/jsidplay2/src/main/resources/netsiddev/About.properties
@@ -1,6 +1,6 @@
 ICON=netsiddev/jsidplay2.png
 TITLE=About jsiddevice
-CREDITS=JSIDDevice v3.4 - SID Network Device\n\n\
+CREDITS=JSIDDevice v${project.version} - SID Network Device\n\n\
 JSIDDevice uses parts of JSidplay2 which are\ncopyrighted to:\n\n\
 Network Interface:\n  Copyright © 2007-2014 Ken Händel,\n\
 \ \ Antti S. Lankila and Wilfred Bos\n\
