--- a/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -173,7 +173,7 @@ C9 00 F0 0F C9 FF F0 0B 8E 01 D4 8D 00 D4 A9 END
 Bug/NCI
 CE 41 03 D0 61 AD 42 03 8D 41 03 AD 12 C0 8D 04 D4 AD 13 C0 8D 0B D4 AD 14 C0 8D 12 D4 EE 40 03 END
 
-Bug/NCI_Digi
+D.A.I.S.Y.
 8D 18 D4 A2 17 A9 00 9D 00 D4 CA 10 FA A5 3C 48 AA A0 00 84 3C BD 00 0D 29 1F F0 03 4C 2A 0B BD 00 0E 85 2C BD 00 13 85 2B F0 09 A0 B6 88 D0 FD END
 
 Burgstaller_B
@@ -1648,6 +1648,9 @@ E0 ?? F0 ?? 8E ?? ?? BD ?? ?? 8D ?? ?? 8D 0E D4 BD ?? ?? 8D ?? ?? 8D 0F D4 END
 X-Byte
 0A A8 C8 8C ?? ?? 4C ?? ?? B5 ?? 0A 8D ?? ?? 0A A8 88 8C ?? ?? B4 ?? C0 END
 
+XPMCK
+C6 05 06 05 18 A5 03 65 05 85 03 A5 04 69 end
+
 Yip_Megasound
 A9 01 8D ?? ?? A2 02 A9 01 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? CA 10 F0 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 A9 0F 8D 18 D4 60 A9 00 8D ?? ?? 60 AD END
 
@@ -1800,3 +1803,4 @@ Crunched:Exomizer
 
 Crunched:PUCrunch
 E8 88 D0 F4 A9 80 85 FB 4C END
+
