--- a/trunk/jsidplay2/src/main/resources/netsiddev/About.properties
+++ b/trunk/jsidplay2/src/main/resources/netsiddev/About.properties
@@ -2,10 +2,10 @@ ICON=netsiddev/jsidplay2.png
 TITLE=About jsiddevice
 CREDITS=JSIDDevice v${project.version} - SID Network Device\n\n\
 JSIDDevice uses parts of JSidplay2 which are\ncopyrighted to:\n\n\
-Network Interface:\n  Copyright © 2007-2014 Ken Händel,\n\
+Network Interface:\n  Copyright \u00A9 2007-2014 Ken H\u00E4ndel,\n\
 \ \ Antti S. Lankila and Wilfred Bos\n\
-Distortion Simulation and 6581/8580 emulation:\n  Copyright © 2005-2011 Antti S. Lankila\n\
-ReSID engine and 6581/8580 emulation:\n  Copyright © 1999-2011 Dag Lem\n\n\
+Distortion Simulation and 6581/8580 emulation:\n  Copyright \u00A9 2005-2011 Antti S. Lankila\n\
+ReSID engine and 6581/8580 emulation:\n  Copyright \u00A9 1999-2011 Dag Lem\n\n\
 Source code can be found at:\n\
-\ \ http://sourceforge.net/projects/jsidplay2/"
+\ \ http://sourceforge.net/projects/jsidplay2/
 OK=OK
