--- a/trunk/jsidplay2/src/main/resources/netsiddev/Settings.properties
+++ b/trunk/jsidplay2/src/main/resources/netsiddev/Settings.properties
@@ -3,5 +3,5 @@ TITLE=Settings
 AUDIO_SETTINGS=Audio Settings
 DEVICE=Device:
 EMULATION_SETTINGS=SID Emulation Settings
-DIGI_BOOST=8580 Digi Boost
+DIGI_BOOST=8580 Digi Boost:
 OK=OK
