About and settings dialogs or now utility windows which don't appear on the taskbar anymore. Dialogs are now always on top and there can only be one instance.

--- a/jsidplay2/src/main/resources/netsiddev/About.properties
+++ b/jsidplay2/src/main/resources/netsiddev/About.properties
@@ -1,5 +1,5 @@
 ICON=netsiddev/jsidplay2.png
-TITLE=About jsiddevice
+TITLE=About JSIDDevice
 CREDITS=JSIDDevice v${project.version} - SID Network Device\n\n\
 JSIDDevice uses parts of JSidplay2 which are\ncopyrighted to:\n\n\
 Network Interface:\n  Copyright \u00A9 2007-2014 Ken H\u00E4ndel,\n\
