Reintroduced JSidDevice 1.0 devices.

--- a/jsidplay2/src/main/resources/netsiddev/ini/jsiddevice.ini
+++ b/jsidplay2/src/main/resources/netsiddev/ini/jsiddevice.ini
@@ -42,6 +42,22 @@ Filter6581CurvePosition = 0.7
 [FilterDarkest6581]
 Filter6581CurvePosition = 0.9
 
+[FilterJSidDevice10_6581]
+Attenuation=0.5
+Nonlinearity=3.3e6
+VoiceNonlinearity=0.96
+Type3BaseResistance=1.3e6
+Type3Offset=1.9e7
+Type3Steepness=1.0066
+Type3MinimumFETResistance=1.8e4
+ResonanceFactor=1.0
+
+[FilterJSidDevice10_8580]				
+Type4K=6.55
+Type4B=20
+VoiceNonlinearity=1.0
+ResonanceFactor=1.0
+
 [FilterTrurl8580R5_1489]
 Type4K=5.7
 Type4B=20
