--- a/trunk/jsidplay2/src/main/resources/libsidplay/sidtune/pictures.properties
+++ b/trunk/jsidplay2/src/main/resources/libsidplay/sidtune/pictures.properties
@@ -4,7 +4,7 @@ Adam\ Bulka\ &\ Michael\ Hendriks=Adam_Bulka.jpg
 Adam\ Gilmore\ (Gizmo)=Adam_Gilmore.jpg
 Adam\ Gilmore=Adam_Gilmore.jpg
 Adrian\ Pertout=Adrian_Pertout.jpg
-André\ Buerger\ (AEG)=AEG.jpg
+Andr\u00e9\ Buerger\ (AEG)=AEG.jpg
 Ari\ Yliaho\ (Agemixer)=Agemixer.jpg
 Andrzej\ Kucharski\ (Akadem)=Akadem.jpg
 Al\ Lowe=Al_Lowe.jpg
@@ -15,14 +15,14 @@ Che\ Lalic\ (Alfatech)=Alfatech.jpg
 Stefan\ Konarkowski\ (Alien)=Alien.jpg
 S.\ Konarkowski\ (Alien)\ &\ Jenny=Alien.jpg
 Allister\ Brimble=Allister_Brimble.jpg
-Björn\ Stockleben\ (Amadeus)=Amadeus.jpg
+Bj\u00f6rn\ Stockleben\ (Amadeus)=Amadeus.jpg
 Alex\ Martin\ (AMB)=AMB.jpg
 Juha-Matti\ Hilpinen\ (AMJ)=AMJ.jpg
 Andreas\ Spreen=Andreas_Spreen.jpg
 Andrew\ Craigie\ (Android)=Andrew_Craigie.jpg
 Andrew\ Fisher\ (Merman)=Andrew_Fisher.jpg
-Ádám\ Dávidovics\ (Andy)=Andy.jpg
-Ádám\ Dávidovics(A.\ J.\ Fletcher)=Andy.jpg
+\u00c1d\u00e1m\ D\u00e1vidovics\ (Andy)=Andy.jpg
+\u00c1d\u00e1m\ D\u00e1vidovics(A.\ J.\ Fletcher)=Andy.jpg
 Antony\ Crowther\ (Ratt)=Antony_Crowther.jpg
 Antony\ Crowther=Antony_Crowther.jpg
 Antti\ Hannula=Antti_Hannula.jpg
@@ -38,12 +38,12 @@ Arman\ Behdad=Arman_Behdad.jpg
 Arndt\ Heitkamp\ (Steelrat)=Arndt_Heitkamp.jpg
 Arndt\ Heitkamp=Arndt_Heitkamp.jpg
 Arne\ Puszelski\ (Arne)=Arne.jpg
-Artúr\ Bujdosó\ (Artlace)=Artlace.jpg
+Art\u00far\ Bujdos\u00f3\ (Artlace)=Artlace.jpg
 Ashley\ Hogg=Ashley_Hogg.jpg
 Andrzej\ Sielicki\ (ASL)=ASL.jpg
 Rafal\ Kazimierski\ (Asterion)=Asterion.jpg
-Jonas\ Håkansson\ (Avalon)=Avalon.jpg
-Christof\ Mühlan\ (Banana)=Banana.jpg
+Jonas\ H\u00e5kansson\ (Avalon)=Avalon.jpg
+Christof\ M\u00fchlan\ (Banana)=Banana.jpg
 Barry\ Leitch\ (The\ Jackal)=Barry_Leitch.jpg
 Barry\ Leitch=Barry_Leitch.jpg
 Ben\ Daglish=Ben_Daglish.jpg
@@ -59,11 +59,11 @@ Peter\ Halin\ (Brite-Lite)=Brite-Lite.jpg
 Sylwester\ Hasiak\ (Buddha)=Buddha.jpg
 Sylweste\ Hasiak\ (Buddha)=Buddha.jpg
 Piotr\ Baczkiewicz\ (Bzyk)=Bzyk.jpg
-Lasse\ Öörni\ (Cadaver)=Cadaver.jpg
-Ákos\ Makrai\ (Cane)=Cane.jpg
-Gábor\ Guzslován\ (Cargo)=Cargo.jpg
-Gábor\ Csordás\ (Carlos)=Carlos.jpg
-Gábor\ Csordás\ <?>=Carlos.jpg
+Lasse\ \u00d6\u00f6rni\ (Cadaver)=Cadaver.jpg
+\u00c1kos\ Makrai\ (Cane)=Cane.jpg
+G\u00e1bor\ Guzslov\u00e1n\ (Cargo)=Cargo.jpg
+G\u00e1bor\ Csord\u00e1s\ (Carlos)=Carlos.jpg
+G\u00e1bor\ Csord\u00e1s\ <?>=Carlos.jpg
 Carsten\ Ohlsen\ (Drake)=Carsten_Ohlsen.jpg
 Roel\ Heerspink\ (Cerror)=Cerror.jpg
 Charles\ Deenen/Maniacs\ of\ Noise=Charles_Deenen.jpg
@@ -71,7 +71,7 @@ Charles\ Deenen=Charles_Deenen.jpg
 Charles\ Deenen\ (TMC)=Charles_Deenen.jpg
 Marc\ (Chotaire)=Chotaire.jpg
 Chris\ Abbott=Chris_Abbott.jpg
-Chris\ Hülsbeck=Chris_Huelsbeck.jpg
+Chris\ H\u00fclsbeck=Chris_Huelsbeck.jpg
 Christoph\ Bergmann=Christoph_Bergmann.jpg
 Norbert\ Kowalski\ (Cleve)=Cleve.jpg
 Marcus\ Jansson\ (CMP)=CMP.jpg
@@ -82,10 +82,10 @@ Roman\ Majewski\ (Compod)=Compod.jpg
 Enno\ Coners\ (Cosowi)=Cosowi.jpg
 Roman\ Chlebec\ (CreaMD)=CreaMD.jpg
 Siegfried\ Rudzynski\ (Crome)=Crome.jpg
-Toni\ Lönnberg\ (!Cube)=Cube.jpg
+Toni\ L\u00f6nnberg\ (!Cube)=Cube.jpg
 Even\ Scharning\ (Cycleburner)=Cycleburner.jpg
-Attila\ Szõke\ (da\ Blondie)=Da_Blondie.jpg
-Attila\ Szõke=Da_Blondie.jpg
+Attila\ Sz\u00f5ke\ (da\ Blondie)=Da_Blondie.jpg
+Attila\ Sz\u00f5ke=Da_Blondie.jpg
 Michal\ Relkowski\ (Daf)=Daf.jpg
 Michal\ Relkowski=Daf.jpg
 Ronny\ Engmann\ (dalezy)=Dalezy.jpg
@@ -99,10 +99,10 @@ Dave\ Warhol\ <?>=Dave_Warhol.jpg
 David\ Whittaker=David_Whittaker.jpg
 Dennis\ Lindroos\ (Deadman)=Deadman.jpg
 Dean\ Evans=Dean_Evans.jpg
-Jesper\ Värn\ (Decoder)=Decoder.jpg
+Jesper\ V\u00e4rn\ (Decoder)=Decoder.jpg
 Richard\ Rinn\ (Deek)=Deek.jpg
-Tero\ Mäyränen\ (Deetsay)=Deetsay.jpg
-Yavuz\ Sükür\ (Defbeat)=Defbeat.jpg
+Tero\ M\u00e4yr\u00e4nen\ (Deetsay)=Deetsay.jpg
+Yavuz\ S\u00fck\u00fcr\ (Defbeat)=Defbeat.jpg
 Peter\ Siekmann\ (Devilock)=Devilock.jpg
 Benjamin\ Goedereis\ (Dgazz)=Dgazz.jpg
 Dwayne\ Bakewell\ (DJB)=DJB.jpg
@@ -115,16 +115,16 @@ Anders\ Daugaard\ (Duck\ LaRock)=Duck_LaRock.jpg
 Hai\ Nguyen\ Dinh\ (Duck-hunter)=Duck-hunter.jpg
 Hai\ Nguyen\ Dinh\ (Duckstabber)=Duck-hunter.jpg
 Rafal\ Pietraszko\ (Dune)=Dune.jpg
-Zoltán\ F.\ Földi\ (Eclipse)=Eclipse.jpg
+Zolt\u00e1n\ F.\ F\u00f6ldi\ (Eclipse)=Eclipse.jpg
 Raik\ Picheta\ (Eco)=Eco.jpg
-Eddie\ Svärd\ (Ed)=Ed.jpg
+Eddie\ Sv\u00e4rd\ (Ed)=Ed.jpg
 Edwin\ van\ Santen=Edwin_van_Santen.jpg
 Kristopher\ Roebuck\ (Einstein)=Einstein.jpg
 Kristopher\ Roebuck=Einstein.jpg
 Eivind\ Sommersten=Eivind_Sommersten.jpg
 Eric\ Ardem\ (ELA)=ELA.jpg
 Dunkel\ Nilsen\ &\ Elektrond=ElekTrond.jpg
-Øyvind\ Vevang\ (Eloquence)=Eloquence.jpg
+\u00d8yvind\ Vevang\ (Eloquence)=Eloquence.jpg
 Elton\ de\ Hoog\ &\ Gerard\ Hultink=Elton_de_Hoog.jpg
 Elton\ de\ Hoog\ (EDH)=Elton_de_Hoog.jpg
 Emmanuel\ Lavall=Emmanuel_Lavall.jpg
@@ -135,7 +135,7 @@ Michael\ Keil\ (Fantastic\ Zool)=Fantastic_Zool.jpg
 M.Keil(Fantastic\ Zool)\ &\ Benjam=Fantastic_Zool.jpg
 Juha\ Granberg\ (FCS)=FCS.jpg
 Paul\ Hannay\ (Feekzoid)=Feekzoid.jpg
-Toni\ Cavén\ (Ferrara)=Ferrara.jpg
+Toni\ Cav\u00e9n\ (Ferrara)=Ferrara.jpg
 Mark\ Dolman=Finn.jpg
 Mark\ Dolman\ (Finn)=Finn.jpg
 Mark\ Dolman\ (Lord\ Superior)=Finn.jpg
@@ -159,10 +159,10 @@ Gerard\ Hultink=Gerard_Hultink.jpg
 Gerhard\ Flagge\ (G-Fellow)=Gerhard_Flagge.jpg
 Lukasz\ Baran\ (Glover)=Glover.jpg
 Lukasz\ Baran\ (Mr.\ Death)=Glover.jpg
-Gösta\ Feiweier=Goesta_Feiweier.jpg
+G\u00f6sta\ Feiweier=Goesta_Feiweier.jpg
 Anders\ Carlsson\ (Goto80)=Goto80.jpg
 Glenn\ Rune\ Gallefoss=GRG.jpg
-Péter\ Varga\ (Griff)=Griff.jpg
+P\u00e9ter\ Varga\ (Griff)=Griff.jpg
 Groepaz=Groepaz.jpg
 Rune\ Gausdal\ (Groms)=Groms.jpg
 Claus\ Leth\ Gregersen\ (Groo)=Groo.jpg
@@ -176,7 +176,7 @@ Adam\ Wieczorek=Harti.jpg
 David\ Malmborg\ (HCL)=HCL.jpg
 Hein\ Holt\ (Hein\ Design)=Hein_Holt.jpg
 Hein\ Holt=Hein_Holt.jpg
-Mark\ Waldaukat\ (Heinmück)=Heinmueck.jpg
+Mark\ Waldaukat\ (Heinm\u00fcck)=Heinmueck.jpg
 Mark\ Waldaukat\ (Heinmukk)=Heinmueck.jpg
 Henning\ Rokling=Henning_Rokling.jpg
 Henning\ Rokling\ (Tornado)=Henning_Rokling.jpg
@@ -198,7 +198,7 @@ Witold\ Kozlowski\ (Jane)=Jane.jpg
 Jason\ Page\ (Jay)=Jason_Page.jpg
 Jason\ Page=Jason_Page.jpg
 Jens-Christian\ Huus=JCH.jpg
-Søren\ Lund\ (Jeff)=Jeff.jpg
+S\u00f8ren\ Lund\ (Jeff)=Jeff.jpg
 Jeff\ Minter=Jeff_Minter.jpg
 Jens\ Blidon=Jens_Blidon.jpg
 Jeroen\ Breebaart\ (JB)=Jeroen_Breebaart.jpg
@@ -232,13 +232,13 @@ Karsten\ Pahuus\ Petersen\ (Kaze)=Kaze.jpg
 Tammo\ Hinrichs\ (KB)=KB.jpg
 Keith\ Tinman=Keith_Tinman.jpg
 Linus\ Walleij\ (King\ Fisher)=King_Fisher.jpg
-Kjell\ Nordbø=Kjell_Nordboe.jpg
+Kjell\ Nordb\u00f8=Kjell_Nordboe.jpg
 Krzysztof\ Krawczyk\ (Klax)=Klax.jpg
-Björn\ Fogelberg\ (Knatter)=Knatter.jpg
+Bj\u00f6rn\ Fogelberg\ (Knatter)=Knatter.jpg
 Krystian\ Wyrwicz\ (Kordiaukis)=Kordiaukis.jpg
 Kris\ Hatlelid=Kris_Hatlelid.jpg
-Kristian\ Røstøen=Kristian_Roestoeen.jpg
-Kristian\ Røstøen\ (Stormbringer)=Kristian_Roestoeen.jpg
+Kristian\ R\u00f8st\u00f8en=Kristian_Roestoeen.jpg
+Kristian\ R\u00f8st\u00f8en\ (Stormbringer)=Kristian_Roestoeen.jpg
 Lars\ Hoff\ (Shade)=Lars_Hoff.jpg
 Lars\ Hoff=Lars_Hoff.jpg
 Marcin\ Mazur\ (Rebe)=Latifah.jpg
@@ -247,8 +247,8 @@ Thomas\ E.\ Petersen\ (Laxity)=Laxity.jpg
 Thomas\ Egeskov\ Petersen=Laxity.jpg
 Aleksander\ Marchwiak\ (Leming)=Leming.jpg
 Leif\ Claesson\ (Liket)=Liket.jpg
-Klaus\ Grøngaard\ (Link)=Link.jpg
-Klaus\ Grøngaard=Link.jpg
+Klaus\ Gr\u00f8ngaard\ (Link)=Link.jpg
+Klaus\ Gr\u00f8ngaard=Link.jpg
 Sascha\ Zeidler\ (Linus)=Linus.jpg
 Michal\ Wycislik\ (Lio)=Lio.jpg
 Lizard=Lizard.jpg
@@ -256,13 +256,13 @@ Magnar\ Harestad\ (Lizard)=Lizard.jpg
 Magnar\ Harestad=Lizard.jpg
 Marek\ Heinrichs\ (Logan)=Logan.jpg
 Milosz\ Ignatowski\ (Longhair)=Longhair.jpg
-Robert\ Dörfler\ (LordNikon)=Lordnikon.jpg
-Robert\ Dörfler\ (Lordnikon)=Lordnikon.jpg
-Lajos\ Suvák\ (Louie)=Louie.jpg
+Robert\ D\u00f6rfler\ (LordNikon)=Lordnikon.jpg
+Robert\ D\u00f6rfler\ (Lordnikon)=Lordnikon.jpg
+Lajos\ Suv\u00e1k\ (Louie)=Louie.jpg
 Luca\ Carrafiello\ (Luca)=Luca.jpg
 Patrick\ Ceuppens\ (Lyon)=Lyon.jpg
-Marcel\ Donné\ (Mad)=Mad.jpg
-Marcel\ Donné\ (Mad\ 69)=Mad.jpg
+Marcel\ Donn\u00e9\ (Mad)=Mad.jpg
+Marcel\ Donn\u00e9\ (Mad\ 69)=Mad.jpg
 Martin\ Arentoft\ (Maduplec)=Maduplec.jpg
 Per\ Tufvesson\ (Mahoney)=Mahoney.jpg
 Per\ Tufvesson\ (Zax)=Mahoney.jpg
@@ -271,10 +271,10 @@ Petr\ Kratky\ (Manex)=Manex.jpg
 Mark\ Cooksey=Mark_Cooksey.jpg
 Mark\ Cooksey\ <?>=Mark_Cooksey.jpg
 Mark\ Tait=Mark_Tait.jpg
-Markus\ Müller\ (Superbrain)=Markus_Mueller.jpg
-Markus\ Müller\ (Hayes)=Markus_Mueller.jpg
-Markus\ Müller\ (Sidbusters)=Markus_Mueller.jpg
-Markus\ Müller=Markus_Mueller.jpg
+Markus\ M\u00fcller\ (Superbrain)=Markus_Mueller.jpg
+Markus\ M\u00fcller\ (Hayes)=Markus_Mueller.jpg
+Markus\ M\u00fcller\ (Sidbusters)=Markus_Mueller.jpg
+Markus\ M\u00fcller=Markus_Mueller.jpg
 Markus\ Schneider=Markus_Schneider.jpg
 Markus\ Schneider\ (Diflex)=Markus_Schneider.jpg
 Markus\ Siebold\ (Ranger)=Markus_Siebold.jpg
@@ -307,9 +307,9 @@ M.\ Nilsson-Vonderburgh\ (Mic)=Mitch.jpg
 Jouni\ Ikonen\ (Mixer)=Mixer.jpg
 Jouni\ Ikonen\ (Wild\ Finn)=Mixer.jpg
 Robert\ Nilsson\ (Monopoly)=Monopoly.jpg
-Sebastian\ Bachliñski\ (Moog)=Moog.jpg
+Sebastian\ Bachli\u00f1ski\ (Moog)=Moog.jpg
 Sebastian\ Bachlinski\ (Moog)=Moog.jpg
-Anders\ Elmén\ (Moon)=Moon.jpg
+Anders\ Elm\u00e9n\ (Moon)=Moon.jpg
 Fredrik\ Segerfalk\ (Moppe)=Moppe.jpg
 Fredrik\ Segerfalk=Moppe.jpg
 Andreas\ Samuelsson\ (Mr.\ Death)=Mr_Death.jpg
@@ -320,23 +320,23 @@ Morten\ Kristensen\ (O'Neill)=MSK.jpg
 Wolfgang\ Reszel\ (Nebula)=Nebula.jpg
 Nick\ Scarim=Nicholas_Scarim.jpg
 Anders\ Nilsson-Stig\ (Nizze)=Nizze.jpg
-Kent\ Valdén\ (Noise\ of\ SID)=Noice_of_SID.jpg
+Kent\ Vald\u00e9n\ (Noise\ of\ SID)=Noice_of_SID.jpg
 Marc\ van\ den\ Bovenkamp\ (No-XS)=No-XS.jpg
 Marc\ van\ den\ Bovenkamp=No-XS.jpg
 Vojta\ Nedved\ (Nooly)=Nula.jpg
 Vojta\ Nedved\ (Nula)=Nula.jpg
-Øyvind\ Jergan\ (Outlaw)=Oeyvind_Jergan.jpg
-Øyvind\ Jergan=Oeyvind_Jergan.jpg
-Olav\ Mørkrid=Olav_Moerkrid.jpg
+\u00d8yvind\ Jergan\ (Outlaw)=Oeyvind_Jergan.jpg
+\u00d8yvind\ Jergan=Oeyvind_Jergan.jpg
+Olav\ M\u00f8rkrid=Olav_Moerkrid.jpg
 Ole-Marius\ Pettersen=Ole-Marius_Pettersen.jpg
-Oliver\ Kläwer=Oliver_Klaewer.jpg
+Oliver\ Kl\u00e4wer=Oliver_Klaewer.jpg
 Oliver\ Klee\ (Odi)=Oliver_Klee.jpg
 Oliver\ Mohr\ (Havoc)=Oliver_Mohr.jpg
 Oliver\ Mohr\ (Zounds)=Oliver_Mohr.jpg
 Marcin\ Olkowski\ (Olsen)=Olsen.jpg
 Marcin\ Olkowski=Olsen.jpg
 Stefan\ Uram\ (Orcan)=Orcan.jpg
-Oskar\ Törnros=Oskar_Toernros.jpg
+Oskar\ T\u00f6rnros=Oskar_Toernros.jpg
 Pablo\ Toledo=Pablo_Toledo.jpg
 Paolo\ Galimberti=Paolo_Galimberti.jpg
 Stephan\ Drost\ (Pater\ Pi)=Pater_Pi.jpg
@@ -352,19 +352,19 @@ Petr\ Chlud\ (PCH)=PCH.jpg
 Per\ Almered=Per_Almered.jpg
 Per\ Bolmstedt\ (UL-Tomten)=Per_Bolmstedt.jpg
 Peter\ Liepa=Peter_Liepa.jpg
-Peter\ Sandén\ (Panda)=Peter_Sanden.jpg
+Peter\ Sand\u00e9n\ (Panda)=Peter_Sanden.jpg
 Peter\ Skutecki\ (Sebuko)=Peter_Skutecki.jpg
 Per\ Fredrik\ Kvarme\ (Lorus)=PFK.jpg
 Per\ Fredrik\ Kvarme\ (PFK)=PFK.jpg
 Krzysztof\ Malczewski\ (Phobos)=Phobos.jpg
 Kurt\ Woloch\ (Pinocchio)=Pinocchio.jpg
-Pawel\ Soltysiñski\ (Polonus)=Polonus.jpg
-Wojciech\ Wardyñski\ (Praiser)=Praiser.jpg
+Pawel\ Soltysi\u00f1ski\ (Polonus)=Polonus.jpg
+Wojciech\ Wardy\u00f1ski\ (Praiser)=Praiser.jpg
 Volker\ Meitz\ (PRI)=PRI.jpg
 Zdenek\ Eisenhammer(PseudoGrafx)=Pseudografx.jpg
 Marcin\ Majdzik\ (Psycho8580)=Psycho.jpg
 Marcin\ Majdzik\ (Psycho)=Psycho.jpg
-Linus\ Åkerlund\ (Puterman)=Puterman.jpg
+Linus\ \u00c5kerlund\ (Puterman)=Puterman.jpg
 Kai\ Walter\ (PVCF)=PVCF.jpg
 Jakob\ Mellander\ (Quan)=Quan.jpg
 Radek\ Andrzejewicz\ (Rabbi)=Rabbi.jpg
@@ -398,7 +398,7 @@ Roger\ Duijckaerts=Roger_Duijckaerts.jpg
 Ron\ van\ den\ Beuken=Ron_van_den_Beuken.jpg
 Ronny\ Pasch=Ronny_Pasch.jpg
 Ronny\ Pasch\ (Cody)=Ronny_Pasch.jpg
-Stefan\ Gülck\ (Rorschach)=Rorschach.jpg
+Stefan\ G\u00fclck\ (Rorschach)=Rorschach.jpg
 Rudolf\ Stember=Rudolf_Stember.jpg
 Rudolf\ Stember\ (Holy\ Grail)=Rudolf_Stember.jpg
 Russell\ Lieblich=Russell_Lieblich.jpg
@@ -435,17 +435,17 @@ Silas\ Warner=Silas_Warner.jpg
 Silas\ S.\ Warner=Silas_Warner.jpg
 Marcus\ Hinzmann\ (SilverFox)=Silver_Fox.jpg
 Simon\ Nicol\ <?>=Simon_Nicol.jpg
-Marc\ François\ (Skywave)=Skywave.jpg
-Marc\ François=Skywave.jpg
+Marc\ Fran\u00e7ois\ (Skywave)=Skywave.jpg
+Marc\ Fran\u00e7ois=Skywave.jpg
 Kenneth\ Mutka\ (Slaygon)=Slaygon.jpg
-Jonas\ Thesén\ (Sleipner)=Sleipner.jpg
+Jonas\ Thes\u00e9n\ (Sleipner)=Sleipner.jpg
 Michal\ Hoffmann\ (Smalltown\ Boy)=Smalltown_Boy.jpg
 Tufan\ Uysal\ (SoNiC)=SoNiC.jpg
-Otto\ Järvinen\ (SounDemoN)=SounDemoN.jpg
+Otto\ J\u00e4rvinen\ (SounDemoN)=SounDemoN.jpg
 Roy\ Johan\ Widding\ (Crockett)=Space-Roy.jpg
 Sphere=Sphere.jpg
 Dariusz\ Rawa\ (Spike)=Spike.jpg
-Stefan\ Hübner\ (St0fF)=St0fF.jpg
+Stefan\ H\u00fcbner\ (St0fF)=St0fF.jpg
 Joe\ Barwick\ (Stainless\ Steel)=Stainless_Steel.jpg
 Stefan\ Hartwig=Stefan_Hartwig.jpg
 Stefano\ Palmonari=Stefano_Palmonari.jpg
@@ -489,20 +489,20 @@ Alexander\ Joscht\ (TMG)=TMG.jpg
 Jason\ Kelk=TMR.jpg
 Jason\ Kelk\ (T.M.R)=TMR.jpg
 Jason\ Kelk\ (TMR)=TMR.jpg
-Torbjörn\ Härje=Tobias_Haerje.jpg
+Torbj\u00f6rn\ H\u00e4rje=Tobias_Haerje.jpg
 Gareth\ Dolloway\ (Tonka)=Tonka.jpg
-Rastislav\ Smutný\ (Top\ Secret)=Top_Secret.jpg
+Rastislav\ Smutn\u00fd\ (Top\ Secret)=Top_Secret.jpg
 Wojciech\ Wojtkiewicz\ (Tracker)=Tracker.jpg
-Manuel\ Müller\ (Rayne)=Trance.jpg
-Manuel\ Müller\ (CJ\ Rayne)=Trance.jpg
-Manuel\ Müller\ (Neve)=Trance.jpg
-Manuel\ Müller\ (Trance)=Trance.jpg
+Manuel\ M\u00fcller\ (Rayne)=Trance.jpg
+Manuel\ M\u00fcller\ (CJ\ Rayne)=Trance.jpg
+Manuel\ M\u00fcller\ (Neve)=Trance.jpg
+Manuel\ M\u00fcller\ (Trance)=Trance.jpg
 Adam\ Dunkels\ (Trident)=Trident.jpg
 Mikael\ Backlund\ (Twoflower)=Twoflower.jpg
-Ulf\ Härnhammar\ (Unifier)=Unifier.jpg
+Ulf\ H\u00e4rnhammar\ (Unifier)=Unifier.jpg
 Vincent\ Voois=Vincent_Voois.jpg
 Vincent\ Voois\ (LNO)=Vincent_Voois.jpg
-László\ Vincze\ (Vincenzo)=Vincenzo.jpg
+L\u00e1szl\u00f3\ Vincze\ (Vincenzo)=Vincenzo.jpg
 Vincent\ Merken\ (Vip)=Vip.jpg
 Vincent\ Merken\ (_V_)=Vip.jpg
 Adam\ Waclawski\ (Wacek)=Wacek.jpg
@@ -526,13 +526,13 @@ Jori\ Olkkonen\ (Yip)=Yip.jpg
 Jori\ Olkkonen\ (Jip)=Yip.jpg
 Michel\ de\ Bree\ (Mad\ B)=Youth.jpg
 Michel\ de\ Bree\ (youtH)=Youth.jpg
-Björn\ Stenberg\ (Zagor)=Zagor.jpg
+Bj\u00f6rn\ Stenberg\ (Zagor)=Zagor.jpg
 Ari-Pekka\ Paljakka\ (Zardax)=Zardax.jpg
 Ray&Markos\ Themelidis\ (Zeldin)=Zeldin.jpg
-Søren\ Bovbjerg\ (Zeus)=Zeus.jpg
-László\ Molnár\ (Zeux)=Zeux.jpg
-Zoltán\ Mericske=Zoltan_Mericske.jpg
-Anders\ Øland\ (Zonix)=Zonix.jpg
-Johan\ Åstrand\ (Zyron)=Zyron.jpg
+S\u00f8ren\ Bovbjerg\ (Zeus)=Zeus.jpg
+L\u00e1szl\u00f3\ Moln\u00e1r\ (Zeux)=Zeux.jpg
+Zolt\u00e1n\ Mericske=Zoltan_Mericske.jpg
+Anders\ \u00d8land\ (Zonix)=Zonix.jpg
+Johan\ \u00c5strand\ (Zyron)=Zyron.jpg
 Tobias\ Svensson\ (Zzap69)=Zzap69.jpg
 Tobias\ Svensson=Zzap69.jpg
