--- a/trunk/jsidplay2service/pom.xml
+++ b/trunk/jsidplay2service/pom.xml
@@ -93,6 +93,11 @@
 			<version>3.0.10.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- the context root -->
