--- a/trunk/jsidplay2app/AndroidManifest.xml
+++ b/trunk/jsidplay2app/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/jsidplay2icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
