All classes in netsiddev package are optimized now except for JavaFX controller classes that extend SIDDeviceStage.

--- a/jsidplay2/proguard.conf
+++ b/jsidplay2/proguard.conf
@@ -5,8 +5,6 @@
 
 -verbose
 
--keep class netsiddev.**
-
 -dontwarn sidplay.**
 -dontwarn libsidplay.**
 
@@ -19,6 +17,8 @@
 -keepclassmembernames class * {
 	@javafx.fxml.FXML *;
 }
+
+-keep class * extends netsiddev.SIDDeviceStage
 
 -keepclassmembers class * extends netsiddev.SIDDeviceStage {
 	private *;
