--- a/trunk/jsidplay2/src/main/proguard/proguard.conf
+++ b/trunk/jsidplay2/src/main/proguard/proguard.conf
@@ -6,7 +6,7 @@
 -dontwarn sidplay.**
 -dontwarn libsidplay.**
 
--keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,LocalVariable*Table,*Annotation*,Synthetic,EnclosingMethod
+-keepattributes *Annotation*
 
 -adaptresourcefilecontents **.fxml,**.properties,META-INF/MANIFEST.MF
 
