--- a/trunk/jsidplay2/src/main/proguard/proguard.conf
+++ b/trunk/jsidplay2/src/main/proguard/proguard.conf
@@ -12,15 +12,10 @@
 
 -flattenpackagehierarchy ''
 
--keepclassmembernames class * {
-	@javafx.fxml.FXML *;
-}
-
 -keep class * extends netsiddev.SIDDeviceStage
 
--keepclassmembers class * extends netsiddev.SIDDeviceStage {
-	private *;
-	public *;
+-keepclassmembers class * {
+	@javafx.fxml.FXML *;
 }
 
 -keep public class netsiddev.NetworkSIDDevice {
