Simplified configuration. Class names that extend SIDDeviceStage need to be preserved in order to read their associated fxml resource file. We can avoid this if we change the SIDDeviceStage class and hard code the resource filename.

--- a/jsidplay2/src/main/proguard/proguard.conf
+++ b/jsidplay2/src/main/proguard/proguard.conf
@@ -12,15 +12,10 @@
 
 -flattenpackagehierarchy ''
 
--keepclassmembernames class * {
-	@javafx.fxml.FXML *;
-}
-
 -keep class * extends netsiddev.SIDDeviceStage
 
--keepclassmembers class * extends netsiddev.SIDDeviceStage {
-	private *;
-	public *;
+-keepclassmembers class * {
+	@javafx.fxml.FXML *;
 }
 
 -keep public class netsiddev.NetworkSIDDevice {
