Class names that extend SIDDeviceStage need to be preserved in order to read their associated fxml resource file. We can avoid this if we change the SIDDeviceStage class and hard code the resource filename.

--- a/jsidplay2/src/main/proguard/proguard.conf
+++ b/jsidplay2/src/main/proguard/proguard.conf
@@ -12,7 +12,7 @@
 
 -flattenpackagehierarchy ''
 
--keep class * extends netsiddev.SIDDeviceStage
+-keepnames class * extends netsiddev.SIDDeviceStage
 
 -keepclassmembers class * {
 	@javafx.fxml.FXML *;
