--- a/trunk/jsidplay2/src/main/proguard/proguard.conf
+++ b/trunk/jsidplay2/src/main/proguard/proguard.conf
@@ -12,7 +12,7 @@
 
 -flattenpackagehierarchy ''
 
--keep class * extends netsiddev.SIDDeviceStage
+-keepnames class * extends netsiddev.SIDDeviceStage
 
 -keepclassmembers class * {
 	@javafx.fxml.FXML *;
