Only one instance allowed for JSidDevice. The name of the mutex is kept the same as older versions of JSidDevice. Updated Launch4J Maven plugin version.

--- a/jsidplay2/pom.xml
+++ b/jsidplay2/pom.xml
@@ -512,7 +512,7 @@
 			<plugin>
 				<groupId>com.akathist.maven.plugins.launch4j</groupId>
 				<artifactId>launch4j-maven-plugin</artifactId>
-				<version>1.7.3</version>
+				<version>1.7.4</version>
 				<executions>
 					<execution>
 						<id>launch4j</id>
@@ -601,6 +601,9 @@
 							<customProcName>false</customProcName>
 							<stayAlive>false</stayAlive>
 							<icon>src/main/launch4j/jsiddevice.ico</icon>
+							<singleInstance>
+								<mutexName>JSidDevice</mutexName>
+							</singleInstance>								
 							<classPath>
 								<mainClass>netsiddev.NetworkSIDDevice</mainClass>
 							</classPath>
