Fixed Alert dialog. It was not showing any text and it didn't have a button to close the dialog.

--- a/jsidplay2/src/main/resources/netsiddev/Settings.properties
+++ b/jsidplay2/src/main/resources/netsiddev/Settings.properties
@@ -1,5 +1,5 @@
 ICON=netsiddev/jsidplay2.png
-TITLE=Settings
+TITLE=JSIDDevice: Settings
 AUDIO_SETTINGS=Audio Settings
 DEVICE=Device:
 EMULATION_SETTINGS=SID Emulation Settings
