preparation of N-SID support (N>=3)

--- a/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
+++ b/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
@@ -8,10 +8,12 @@ LOOP=Loop track
 SINGLE=Single track
 FREQUENCY=Set frequency in Hz
 DUAL_SID=Force dual SID environment
+THIRD_SID=Force third SID environment
 FORCE_CLOCK=Force user specific VIC clock speed PAL or NTSC (default: defined by song)
 DEFAULT_CLOCK=Set default VIC clock speed PAL or NTSC (to be used, if UNKNOWN)
 DISABLE_FILTER=No SID filter emulation
 DISABLE_STEREO_FILTER=No stereo SID filter emulation
+DISABLE_3RD_SID_FILTER=No 3rd SID filter emulation
 FORCE_MODEL=Use chip model MOS8580 or MOS6581 (default: from tune or cfg)
 DEFAULT_MODEL=Default chip model MOS8580 or MOS6581 (to be used, if UNKNOWN)
 START_TIME=Start time in [m:]s format
@@ -54,6 +56,10 @@ MUTE_3=3   - mute voice 3
 MUTE_4=4   - mute voice 4 (stereo)
 MUTE_5=5   - mute voice 5 (stereo)
 MUTE_6=6   - mute voice 6 (stereo)
+MUTE_7=7   - mute voice 7 (3rd SID)
+MUTE_8=8   - mute voice 8 (3rd SID)
+MUTE_9=9   - mute voice 9 (3rd SID)
 FILTER_ENABLE=f   - enable/disable filter
 STEREO_FILTER_ENABLE=g   - enable/disable stereo filter
+3RD_SID_FILTER_ENABLE=G   - enable/disable 3rd SID filter
 QUIT=q   - quit player
