preparation of N-SID support (N=3)

--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -128,7 +128,14 @@ StereoSidModel=
 3rdSIDModel=
 ; Base address of a second emulated SID chip (if it could not be detected).
 dualSidBase=0xd420
-3rdSIDBase=0xdf00
+thirdSIDBase=0xd440
+
+MainVolume=6
+SecondVolume=6
+ThirdVolume=6
+MainBalance=0
+SecondBalance=1
+ThirdBalance=1
 
 ; ReSID
 ; Define the filter to use for the 6581 and 8580 SIDs.
