--- a/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
+++ b/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
@@ -3,25 +3,30 @@ TITLE=Emulation Settings
 
 VOLUME_CONTROL=Volume Control
 MAIN_SID_LEVEL=Main SID level
-SECOND_SID_LEVEL=Second SID level
-LEFT_BALANCE=SID Balance (Left to Right Speaker)
-RIGHT_BALANCE=Stereo SID Balance (Right to Left Speaker)
+SECOND_SID_LEVEL=2.SID level
+THIRD_SID_LEVEL=3.SID level
+MAIN_BALANCE=SID Balance (Left to Right Speaker)
+SECOND_BALANCE=2.SID Balance (Right to Left Speaker)
+THIRD_BALANCE=3.SID Balance (Right to Left Speaker)
 
 SID_CONTROL=SID Control
-MODEL=Model:
-STEREO_MODEL=Model:
+MAIN_MODEL=Model:
+SECOND_MODEL=Model:
+THIRD_MODEL=Model:
 DEFAULT_SID=Default Model:
 
 STEREO_MODE=SID Count:
 AUTO=Automatic
 FAKE_STEREO=2 SIDs using same base address (Mono forced as Stereo)
 STEREO=2 SIDs (Force Stereo)
+3SID=3 SIDs (Force Stereo)
 
 BASE_ADDRESS_TIP=0xd400 = Fake Stereo (Two SID chips for mono tunes)
 SID_READ=SID performing reads is:
 SID_READ_TIP=Read operations are performed by this SID chip
 FIRST_SID=Main SID
-SECOND_SID=Second SID
+SECOND_SID=2.SID
+THIRD_SID=3.SID
 
 DIGI_BOOST=Digi Boost
 AUTO=Auto
