3SID support complete, 8 example tunes added

--- a/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.properties
+++ b/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.properties
@@ -2,12 +2,14 @@ OSCILLOSCOPE=Oscilloscope
 
 MONO_SID_=Mono SID:
 STEREO_SID_=Stereo SID:
+3SID_=3rd SID:
 MUTE_VOICE_1=Mute Voice 1
 MUTE_VOICE_2=Mute Voice 2
 MUTE_VOICE_3=Mute Voice 3
 
 MONO_SID=Mono SID
 STEREO_SID=Stereo SID
+3SID=3rd SID
 
 WAVE=Wave
 ENVELOPE=Envelope
