1. SID tune infos added for third SID 2.Console player change of device is now possible

--- a/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
+++ b/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
@@ -1,6 +1,7 @@
 USAGE=Display usage
 DEBUG=Display CPU register and assembly dumps
 DRIVER=Audio driver (NONE, SOUNDCARD, WAV, MP3, LIVE_WAV or LIVE_MP3)
+DEVICEINDEX=Sound Device index for SOUNDCARD audio driver
 EMULATION=Emulation (NONE, RESID, RESIDFP, HARDSID)
 RECORDING_FILENAME=Output filename for recording
 START_SONG=Start song (default: tune start song)
@@ -56,9 +57,9 @@ MUTE_3=3   - mute voice 3
 MUTE_4=4   - mute voice 4 (stereo)
 MUTE_5=5   - mute voice 5 (stereo)
 MUTE_6=6   - mute voice 6 (stereo)
-MUTE_7=7   - mute voice 7 (3rd SID)
-MUTE_8=8   - mute voice 8 (3rd SID)
-MUTE_9=9   - mute voice 9 (3rd SID)
+MUTE_7=7   - mute voice 7 (3-SID)
+MUTE_8=8   - mute voice 8 (3-SID)
+MUTE_9=9   - mute voice 9 (3-SID)
 FILTER_ENABLE=f   - enable/disable filter
 STEREO_FILTER_ENABLE=g   - enable/disable stereo filter
 3RD_SID_FILTER_ENABLE=G   - enable/disable 3rd SID filter
