--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -92,13 +92,18 @@ SIDDriver=/libsidplay/sidtune/psiddriver.asm
 Frequency=48000
 ; Sampling method in use
 Sampling=Decimate
-; This allows the default playback to be changed to 1 or 2 channels (mono or stereo).
-;When selecting 2 channels songs identified as stereo will play correctly using 2 SIDs. Tunes not identified as stereo will be assumed as mono and therefore it's channels will be split across 2 SIDs.
-; Currently there is no way to identify as stereo PSID tune and therefore you must use -fd (force dual) to play these tunes. Using force dual with mono tunes will cause the second channel to play nothing.
-; The only format to support this auto stereo feature is MUS (+ STR).
-;When selecting 1 channel songs identifed as stereo will play on 2 SIDs but there outputs will be remixed back to mono. PSID stereo tunes without the -fd flags will again have problems as they will both
-; parts of the song will be written to the same SID causing unpredictable results
-Channels=
+; Volume of the SID chip 0(-6db)..12(+6db)
+MainVolume=6
+; Volume of a second SID chip (stereo) 0(-6db)..12(+6db)
+SecondVolume=6
+; Volume of a third SID chip (3-sid) 0(-6db)..12(+6db)
+ThirdVolume=6
+; Panning feature: spreading of the SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
+MainBalance=0.0
+; Panning feature: spreading of a second SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
+SecondBalance=1.0
+; Panning feature: spreading of a third SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
+ThirdBalance=0.5
 
 [Emulation]
 ; Sets the default system clock when the tune doesn't specify its preferred clock.
@@ -115,30 +120,30 @@ HardSID6581=1
 HardSID8580=2
 ; Use this to enable or disable the SID internal filter.
 UseFilter=true
+; Use this to enable or disable a second SID internal filter.
 UseStereoFilter=true
+; Use this to enable or disable a third SID internal filter.
 Use3rdSIDFilter=true
 ; Use Digiboost hack for 6581/8580
 DigiBoosted8580=false
 ; Force the tune to be a stereo tune (if it could not be detected).
 ; A second SID is then emulated using base address dualSidBase.
 forceStereoTune=false
+; Force the tune to be a 3-SID tune (if it could not be detected).
+; A third SID is then emulated using base address thirdSIDBase.
 force3SIDTune=false
 ; Use this SID model for stereo SID (default: use 1st SIDs model)
 StereoSidModel=
+; Use this SID model for 3-SID (default: use 1st SIDs model)
 3rdSIDModel=
 ; Base address of a second emulated SID chip (if it could not be detected).
 dualSidBase=0xd420
+; Base address of a third emulated SID chip (if it could not be detected).
 thirdSIDBase=0xd440
 
-MainVolume=6
-SecondVolume=6
-ThirdVolume=6
-MainBalance=0
-SecondBalance=1
-ThirdBalance=1
-
-; ReSID
-; Define the filter to use for the 6581 and 8580 SIDs.
+; Filters to be used of Dag Lem's resid 1.0 beta
+;===============================================
+; Define the filter to use for the 6581 and 8580 SIDs (for the first, a second and a third SID chip).
 ; This value refers to a section name in this file.
 Filter6581=FilterAverage6581
 Stereo_Filter6581=FilterAverage6581
@@ -147,7 +152,8 @@ Filter8580=FilterAverage8580
 Stereo_Filter8580=FilterAverage8580
 3rdSID_Filter8580=FilterAverage8580
 
-; ReSID-fp
+; Filters to be used of Antti S. Lankila's resid-fp (distortion simulation)
+;==========================================================================
 ; Define the filter to use for the 6581 and 8580 SIDs.
 ; This value refers to a section name in this file.
 ReSIDfp_Filter6581=FilterAlankila6581R4AR_3789
@@ -157,6 +163,8 @@ ReSIDfp_Filter8580=FilterTrurl8580R5_3691
 ReSIDfp_Stereo_Filter8580=FilterTrurl8580R5_3691
 ReSIDfp_3rdSID_Filter8580=FilterTrurl8580R5_3691
 
+; Filter definitions of Dag Lem's resid 1.0 beta
+;===============================================
 [FilterLight8580]
 Filter8580CurvePosition = 13400
 
@@ -187,6 +195,8 @@ Filter6581CurvePosition = 0.7
 [FilterDarkest6581]
 Filter6581CurvePosition = 0.9
 
+; Filter definitions of Antti S. Lankila's resid-fp (distortion simulation)
+;==========================================================================
 [FilterTrurl8580R5_1489]
 Type4K=5.7
 Type4B=20
