syntax errors removed

--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -31,7 +31,7 @@ FloppyType=C1541
 
 [Printer]
 ; Turn Printer on
-PrinterOn=false;
+PrinterOn=false
 
 [Console]
 ; This can be used to redefine the characters for the relevent position on the frame surrounding the displayed text information.
@@ -89,7 +89,7 @@ UseStereoFilter=true
 ; Use this to enable or disable a third SID internal filter.
 Use3rdSIDFilter=true
 ; For stereo and 3-SID tunes: which SID chip should be read
-SidNumToRead=0;
+SidNumToRead=0
 ; Use Digiboost hack for 6581/8580
 DigiBoosted8580=false
 ; Base address of a second emulated SID chip (if it could not be detected).
