--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -4,8 +4,8 @@
 HVSC Dir=
 ;Enable/Disable song length database
 EnableDatabase=true
-;Default song length (will be used, if the song length database does not contain related entries or is disabled)
-Default Play Length=180
+;Default song length [mm:]ss (will be used, if the song length database does not contain related entries or is disabled)
+Default Play Length=03:00
 ;Loop a tune (turn on to repeat a single tune)
 Loop=false
 ;Play start song, only (or else play all songs)
@@ -69,7 +69,7 @@ ThirdBalance=0.5
 
 [Emulation]
 ; Emulation engine (Dag Lem's resid 1.0 beta, Antti S. Lankila's resid-fp,HardSID Hardware)
-Emulation=Dag Lem's resid 1.0 beta
+Emulation=RESID
 ; Sets the default system clock when the tune doesn't specify its preferred clock.
 DefaultClockSpeed=PAL
 ; Ignores the tune's system clock and instead uses this value in every case.
