1. choose emulation engine perSID chip 2. handle overflow samples clocking SID chips with different engines

--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -68,8 +68,14 @@ SecondBalance=1.0
 ThirdBalance=0.5
 
 [Emulation]
-; Emulation engine (Dag Lem's resid 1.0 beta, Antti S. Lankila's resid-fp,HardSID Hardware)
+; Default emulation engine (RESID, RESIDFP)
 Emulation=RESID
+; Force to use specific SID emulation engine for the first SID (RESID,RESIDFP)
+UserEmulation=
+; Force to use specific SID emulation engine for the second SID (RESID,RESIDFP)
+StereoEmulation=
+; Force to use specific SID emulation engine for the third SID (RESID,RESIDFP)
+3rdSIDEmulation=
 ; Sets the default system clock when the tune doesn't specify its preferred clock.
 DefaultClockSpeed=PAL
 ; Ignores the tune's system clock and instead uses this value in every case.
